--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem at repellat quaerat non distinctio quia ullam laborum sunt reiciendis possimus!</p>
+            <p>Perkenalkan saya adalah seorang ASN yang bekerja di Instansi Pemerintah Daerah sebagai Pelaksana dengan Golongan Ruang III/a (Penata Muda)</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem magnam delectus sed exercitationem harum nemo.</p>
+            <p>Saya memiliki kemampuan pengolahan data khususnya pada aplikasi Microsoft Excel dan saat ini tertarik mempelajari pemrograman khususnya bahasa pemrograman web</p>
           </div>
         </div>
       </div>
